force-app/main/default/objects/Booking__c/fields/Logistic_Company__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Company__c</fullName>
    <label>Logistic Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FedEx Corp</fullName>
            </value>
            <value>
                <fullName>DHL Group</fullName>
            </value>
            <value>
                <fullName>UPS (United Parcel Service)</fullName>
            </value>
            <value>
                <fullName>Kuehne + Nagel</fullName>
            </value>
            <value>
                <fullName>DSV</fullName>
            </value>
            <value>
                <fullName>Maersk</fullName>
            </value>
            <value>
                <fullName>DB Schenker</fullName>
            </value>
            <value>
                <fullName>CEVA Logistics</fullName>
            </value>
            <value>
                <fullName>Nippon Express</fullName>
            </value>
            <value>
                <fullName>C.H. Robinson</fullName>
            </value>
            <value>
                <fullName>XPO Logistics</fullName>
            </value>
            <value>
                <fullName>Amazon Transportation Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>