force-app/main/default/objects/Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Logistic_Company__c</columns>
    <columns>Consignment_Number__c</columns>
    <columns>Delivery_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>